--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -60,6 +60,7 @@ p{
     overflow-y: hidden;
     width: 100%;
     height: 100%;
+    background-color: #67a5da;
 }
 
 .scroller::-webkit-scrollbar {
