--- a/css/topAttraction.css
+++ b/css/topAttraction.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
+body{
+    background-image: none;
+}
+
 .top-attraction{
     overflow-y: scroll;
     background-color: blanchedalmond;
+    position: fixed;
+    height: 50vh;
+    bottom: 39px;
+    width: 100%;
 }
 
 p{
@@ -141,6 +149,44 @@ p{
     right: 0;
     padding: 1px;
 }
+
+/* for map container */
+#map {
+    width: 100%;
+    height: 70vh;
+}
+
+#map-container{
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    height: 40vh;
+    width: 90%;
+    position: fixed;
+    top: 35px;
+    left: 20px;
+    box-shadow: 3px 2px 14px royalblue;
+}
+
+.marker {
+    background-image: url('https://res-console.cloudinary.com/dajhwrmig/thumbnails/v1/image/upload/v1612794200/Njc4MTExLW1hcC1tYXJrZXItNTEyXzFfZG5ndWRj/preview');
+    background-size: cover;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mapboxgl-popup {
+    max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+
 
 /* For full screen pc */
 @media only screen and (min-width: 768px){
