--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -61,6 +61,7 @@ p{
     width: 100%;
     height: 100%;
     background-color: #67a5da;
+    contain: content;
 }
 
 .scroller::-webkit-scrollbar {
@@ -86,6 +87,7 @@ p{
     width: 100%;
     justify-items: center;
     background-color: rgb(21 7 4);
+    z-index: 1000;
 }
 
 
