--- a/css/oneDay.css
+++ b/css/oneDay.css
@@ -4,6 +4,24 @@ body{
     background-image: none;
 }
 
+#map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.truck {
+    margin: -10px -10px;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    background: #3887be;
+    pointer-events: none;
+}
+
 .top-attraction{
     overflow-y: scroll;
     background-color: blanchedalmond;
